--- a/Randomization_simulation_methods/Randomization.bib
+++ b/Randomization_simulation_methods/Randomization.bib
@@ -277,6 +277,38 @@
   pmc      = "PMC1207814"
 }
 
+@BOOK{Sisson2018-ke,
+  title     = "Handbook of Approximate Bayesian Computation",
+  author    = "Sisson, Scott A and Fan, Yanan and Beaumont, Mark A",
+  abstract  = "As the world becomes increasingly complex, so do the statistical
+               models required to analyse the challenging problems ahead. For
+               the very first time in a single volume, the Handbook of
+               Approximate Bayesian Computation (ABC) presents an extensive
+               overview of the theory, practice and application of ABC methods.
+               These simple, but powerful statistical techniques, take Bayesian
+               statistics beyond the need to specify overly simplified models,
+               to the setting where the model is defined only as a process that
+               generates data. This process can be arbitrarily complex, to the
+               point where standard Bayesian techniques based on working with
+               tractable likelihood functions would not be viable. ABC methods
+               finesse the problem of model complexity within the Bayesian
+               framework by exploiting modern computational power, thereby
+               permitting approximate Bayesian analyses of models that would
+               otherwise be impossible to implement. The Handbook of ABC
+               provides illuminating insight into the world of Bayesian
+               modelling for intractable models for both experts and newcomers
+               alike. It is an essential reference book for anyone interested
+               in learning about and implementing ABC techniques to analyse
+               complex models in the modern world.",
+  publisher = "CRC Press, Taylor and Francis Group",
+  month     =  sep,
+  year      =  2018,
+  url       = "https://play.google.com/store/books/details?id=t969tQEACAAJ",
+  keywords  = "Module - Randomization",
+  language  = "en",
+  isbn      = "9781315117195"
+}
+
 @ARTICLE{Weiss1998-ce,
   title    = "Inference of population history using a likelihood approach",
   author   = "Weiss, G and von Haeseler, A",
