--- a/Randomization_simulation_methods/5.X-Genetic_algorithm.qmd
+++ b/Randomization_simulation_methods/5.X-Genetic_algorithm.qmd
@@ -33,7 +33,7 @@ ggplot2::theme_set(theme_cowplot(font_size = 18))
 set.seed(6452730)
 ```
 
-Many problems are more easily (or possibly) solved by not using a model with a traditional likelihood
+Many problems are more easily (or possibly) solved without a traditional likelihood
 
 1. Sample from distributions and compare to observed values (Approximate Bayesian Computation)
 2. Generate "populations" of parameters and let them "evolve" across generations (Genetic Algorithm)
@@ -42,10 +42,10 @@ Many problems are more easily (or possibly) solved by not using a model with a t
 ## Genetic algorithm
 
 - "Genetic" in name only
-    - Inspired by ideas from evolution (populations, selection, mutation, crossover)
+    - Inspired by ideas from evolution: populations, selection, mutation, crossover
 - General optimization approach
     - "Stochastic search algorithm" [@Scrucca2013-jf]
-    - No likelihood needed
+    - No likelihood necessary: optimize on MSE, MAE, *r*
 
 
 ## Genetic algorithm history
@@ -56,14 +56,23 @@ Many problems are more easily (or possibly) solved by not using a model with a t
 
 ## Benefits
 
+- General solution for optimization
+- Resists getting stuck in local optima
+- Fast by combining derivative-based optimization with an evolutionary algorithm
+
+
+## GA schematic
+
+![](Images/GA.png){fig-align="center"}
+
 
 ## R packages for GA
 
-1. [`rgenoud`](http://sekhon.berkeley.edu/rgenoud)
+1. `rgenoud` (GENetic Optimization Using Derivatives) [@Sekhon1998-hs]
 2. `GA` [@Scrucca2013-jf]
 
 
-## Simulate data
+## Simulate data: Gamma(3, 3)
 
 ```{r}
 #| echo: false
@@ -72,13 +81,13 @@ set.seed(234798)
 y <- rgamma(500, shape = 3, rate = 3)
 
 ggplot(tibble(y), aes(y)) +
-  geom_histogram(bins = 30)
+  geom_histogram(bins = 30, fill = "darkorange3")
 ```
 
 
 ## Model statement and function
 
-$$y \sim Gamma(shape, rate)$$
+$$y \sim Gamma(shape,~rate)$$
 
 ```{r}
 #| echo: true
@@ -103,6 +112,18 @@ gamma_sim(c(3, 3))
 
 ## `genoud()` options: `P1` - `P9`
 
+Much detail in Mebane and Sekhon [-@Mebane2011-vy]
+
+1. Cloning
+2. Uniform mutation
+3. Boundary mutation
+4. Non-uniform mutation
+5. Polytope crossover
+6. Simple crossover
+7. Whole non-uniform mutation
+8. Heuristic crossover
+9. Local-minimum crossover
+
 
 ## Fitting the model
 
@@ -120,12 +141,14 @@ genoud(gamma_sim,
 
 - No prior distributions to draw from
 - No samples to process
+    - Optima only
 
 
 ## Challenging models
 
 - "Intractable" likelihoods
     - Flat or oddly shaped surfaces
+    - Discontinuous likelihood
 - Nonlinear models
 - Multiple optima
 
@@ -148,26 +171,16 @@ Gompertz <- function(t, a, b, c) {
 ```
 
 
-## Testing
-
-```{r}
-#| echo: false
-
-GG <- tibble(t = seq(0, 25, length.out = 200),
-             y = Gompertz(t, a = 5, b = 1, c = 0.5))
-
-ggplot(GG, aes(t, y)) +
-  geom_line(linewidth = 1) +
-  scale_y_continuous(limits = c(0, 6))
-```
-
-
-## Simulate data
+## Simulate data: a = 5, b = 1, c = 0.5
 
 ```{r}
 #| echo: false
 
 set.seed(436578)
+
+GG <- tibble(t = seq(0, 25, length.out = 200),
+             y = Gompertz(t, a = 5, b = 1, c = 0.5))
+
 GGsim <- tibble(t = runif(20, min = 0, max = 25),
                 y = Gompertz(t, a = 5, b = 1, c = 0.5) +
                   rnorm(20, 0, 0.25))
@@ -182,10 +195,12 @@ ggplot() +
 ## Setting up `genoud()`
 
 ```{r}
+#| echo: true
+
 Gomp_MSE <- function(p, GGsim) {
   pred <- Gompertz(GGsim$t, p[1], p[2], p[3])
   obs <- GGsim$y
-  return(mean((obs - pred) ^ 2))
+  return(sqrt(mean((obs - pred) ^ 2)))
 }
 
 gen <- genoud(fn = Gomp_MSE,
