--- a/Randomization_simulation_methods/Randomization.bib
+++ b/Randomization_simulation_methods/Randomization.bib
@@ -398,38 +398,37 @@
 }
 
 @ARTICLE{Sekhon1998-hs,
-  title     = "Genetic Optimization Using Derivatives",
-  author    = "Sekhon, Jasjeet S and Mebane, Walter R",
-  abstract  = "[We describe a new computer program that combines evolutionary
-               algorithm methods with a derivative-based, quasi-Newton method
-               to solve difficult unconstrained optimization problems. The
-               program, called GENOUD (GENetic Optimization Using Derivatives),
-               effectively solves problems that are nonlinear or perhaps even
-               discontinuous in the parameters of the function to be optimized.
-               When a statistical model's estimating function (for example, a
-               log-likelihood) is nonlinear in the model's parameters, the
-               function to be optimized will usually not be globally concave
-               and may contain irregularities such as saddlepoints or
-               discontinuous jumps. Optimization methods that rely on
-               derivatives of the objective function may be unable to find any
-               optimum at all. Or multiple local optima may exist, so that
-               there is no guarantee that a derivative-based method will
-               converge to the global optimum. We discuss the theoretical basis
-               for expecting GENOUD to have a high probability of finding
-               global optima. We conduct Monte Carlo experiments using scalar
-               Normal mixture densities to illustrate this capability. We also
-               use a system of four simultaneous nonlinear equations that has
-               many parameters and multiple local optima to compare the
-               performance of GENOUD to that of the Gauss-Newton algorithm in
-               SAS's PROC MODEL.]",
-  journal   = "Polit. Anal.",
-  volume    =  7,
-  pages     = "187--210",
-  year      =  1998,
-  url       = "https://www.cambridge.org/core/journals/political-analysis/article/genetic-optimization-using-derivatives/9C2ACCE0EF8AA8E7E905DC4130D9660D",
-  keywords  = "Genetic algorithm;Module - Randomization",
-  issn      = "1047-1987, 1476-4989",
-  doi       = "10.1093/pan/7.1.187"
+  title    = "Genetic Optimization Using Derivatives",
+  author   = "Sekhon, Jasjeet S and Mebane, Walter R",
+  abstract = "[We describe a new computer program that combines evolutionary
+              algorithm methods with a derivative-based, quasi-Newton method to
+              solve difficult unconstrained optimization problems. The program,
+              called GENOUD (GENetic Optimization Using Derivatives),
+              effectively solves problems that are nonlinear or perhaps even
+              discontinuous in the parameters of the function to be optimized.
+              When a statistical model's estimating function (for example, a
+              log-likelihood) is nonlinear in the model's parameters, the
+              function to be optimized will usually not be globally concave and
+              may contain irregularities such as saddlepoints or discontinuous
+              jumps. Optimization methods that rely on derivatives of the
+              objective function may be unable to find any optimum at all. Or
+              multiple local optima may exist, so that there is no guarantee
+              that a derivative-based method will converge to the global
+              optimum. We discuss the theoretical basis for expecting GENOUD to
+              have a high probability of finding global optima. We conduct
+              Monte Carlo experiments using scalar Normal mixture densities to
+              illustrate this capability. We also use a system of four
+              simultaneous nonlinear equations that has many parameters and
+              multiple local optima to compare the performance of GENOUD to
+              that of the Gauss-Newton algorithm in SAS's PROC MODEL.]",
+  journal  = "Polit. Anal.",
+  volume   =  7,
+  pages    = "187--210",
+  year     =  1998,
+  url      = "https://www.cambridge.org/core/journals/political-analysis/article/genetic-optimization-using-derivatives/9C2ACCE0EF8AA8E7E905DC4130D9660D",
+  keywords = "Genetic algorithm;Module - Randomization",
+  issn     = "1047-1987, 1476-4989",
+  doi      = "10.1093/pan/7.1.187"
 }
 
 @BOOK{Goldberg1989-zk,
@@ -591,9 +590,7 @@
 
 @ARTICLE{Scrucca2017-yg,
   title     = "On Some Extensions to {GA} Package: Hybrid Optimisation,
-               Parallelisation and Islands {EvolutionOn} some extensions to
-               {GA} package: hybrid optimisation, parallelisation and islands
-               evolution",
+               Parallelisation and Islands Evolution",
   author    = "Scrucca, Luca",
   abstract  = "Genetic algorithms are stochastic iterative algorithms in which
                a population of individuals evolve by emulating the process of
